changed responses structure and added student detail page with general info
