# app/Http/Requests/StoreGameRequest.php
@@ -16,9 +16,12 @@ class StoreGameRequest extends ApiRequest
     {
         return [
             'played_at' => 'required|date',
+            'name' => 'required|string',
+            'winner' => 'sometimes|exists:students,id',
             'moves' => 'required|array',
             'moves.*.duration' => 'required|integer',
             'moves.*.student' => 'required|integer|exists:students,id',
+            'moves.*.by_color' => 'required|boolean',
             'moves.*.card_on_deck' => 'required',
             'moves.*.card_on_deck.operation' => 'required_with:result|string',
             'moves.*.card_on_deck.result' => 'required_with:operation|numeric',
